2006-02-12  Maciej Stachowiak  <mjs@apple.com>

        Unreviewed build fix.

        - fix build

        * bindings/scripts/CodeGeneratorJS.pm: Update for splitting of the
        dom_textimpl.h header.

2006-02-11  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin.

        - rename FrameTreeNode to FrameTree and treeNode() to tree()
        http://bugzilla.opendarwin.org/show_bug.cgi?id=7210
        
        This may be slightly less accurate, but reads better.

        * WebCore.xcodeproj/project.pbxproj:
        * bridge/mac/BrowserExtensionMac.mm:
        (WebCore::BrowserExtensionMac::createNewWindow):
        * bridge/mac/MacFrame.mm:
        (WebCore::MacFrame::submitForm):
        (WebCore::MacFrame::nextKeyViewInFrameHierarchy):
        * bridge/mac/WebCoreFrameBridge.mm:
        (-[WebCoreFrameBridge firstChild]):
        (-[WebCoreFrameBridge lastChild]):
        (-[WebCoreFrameBridge childCount]):
        (-[WebCoreFrameBridge previousSibling]):
        (-[WebCoreFrameBridge nextSibling]):
        (-[WebCoreFrameBridge appendChild:]):
        (-[WebCoreFrameBridge removeChild:]):
        (-[WebCoreFrameBridge setParent:]):
        (-[WebCoreFrameBridge parent]):
        (-[WebCoreFrameBridge setName:]):
        (-[WebCoreFrameBridge name]):
        * dom/DocumentImpl.cpp:
        (WebCore::DocumentImpl::parentDocument):
        * khtml/ecma/kjs_window.cpp:
        (KJS::Window::getValueProperty):
        (KJS::Window::put):
        (KJS::Window::isSafeScript):
        (KJS::WindowFunc::callAsFunction):
        * khtml/html/html_baseimpl.cpp:
        (WebCore::HTMLFrameElementImpl::isURLAllowed):
        * khtml/html/html_headimpl.cpp:
        (WebCore::HTMLLinkElementImpl::process):
        * page/Frame.cpp:
        (WebCore::Frame::stopLoading):
        (WebCore::Frame::clear):
        (WebCore::Frame::stopAnimations):
        (WebCore::Frame::checkCompleted):
        (WebCore::Frame::checkEmitLoadEvent):