@@ -106,83 +106,4 @@ void CachedXSLStyleSheet::error( int /*err*/, const char */*text*/ )
 
 #endif
 
-#ifndef KHTML_NO_XBL
-CachedXBLDocument::CachedXBLDocument(DocLoader* dl, const DOMString &url, KIO::CacheControl _cachePolicy, time_t _expireDate)
-: CachedObject(url, XBL, _cachePolicy, _expireDate), m_document(0)
-{
-    // It's XML we want.
-    setAccept("text/xml, application/xml, application/xhtml+xml, text/xsl, application/rss+xml, application/atom+xml");
-    
-    // Load the file
-    Cache::loader()->load(dl, this, false);
-    m_loading = true;
-    m_decoder = new Decoder;
-}
-
-CachedXBLDocument::~CachedXBLDocument()
-{
-    if (m_document)
-        m_document->deref();
-}
-
-void CachedXBLDocument::ref(CachedObjectClient *c)
-{
-    CachedObject::ref(c);
-    if (!m_loading)
-        c->setXBLDocument(m_url, m_document);
-}
-
-void CachedXBLDocument::deref(CachedObjectClient *c)
-{
-    Cache::flush();
-    CachedObject::deref(c);
-    if (canDelete() && m_free)
-        delete this;
-}
-
-void CachedXBLDocument::setCharset( const QString &chs )
-{
-    if (!chs.isEmpty())
-        m_decoder->setEncoding(chs.latin1(), Decoder::EncodingFromHTTPHeader);
-}
-
-void CachedXBLDocument::data( QBuffer &buffer, bool eof )
-{
-    if (!eof) return;
-    
-    assert(!m_document);
-    
-    m_document =  new XBL::XBLDocumentImpl();
-    m_document->ref();
-    m_document->open();
-    
-    QString data = m_decoder->decode(buffer.buffer().data(), buffer.buffer().size());
-    m_document->write(data);
-    setSize(buffer.buffer().size());
-    buffer.close();
-    
-    m_document->finishParsing();
-    m_document->close();
-    m_loading = false;
-    checkNotify();
-}
-
-void CachedXBLDocument::checkNotify()
-{
-    if(m_loading)
-        return;
-    
-    CachedObjectClientWalker w(m_clients);
-    while (CachedObjectClient *c = w.next())
-        c->setXBLDocument(m_url, m_document);
-}
-
-void CachedXBLDocument::error( int /*err*/, const char */*text*/ )
-{
-    m_loading = false;
-    checkNotify();
-}
-
-#endif
-
 }
